--- a/src/main/resources/AllCaregiverView.fxml
+++ b/src/main/resources/AllCaregiverView.fxml
@@ -26,7 +26,8 @@
              <TextField fx:id="txfBirthday" prefWidth="160.0" promptText="Date of Birth" />
             <TextField fx:id="txfTelephone" prefWidth="160.0" promptText="Telefonnummer" />
             <Button fx:id="btnAdd" mnemonicParsing="false"  onAction="#handleAdd" prefWidth="90.0" text="Hinzufügen" />
-            <Button fx:id="btnDelete" mnemonicParsing="false" onAction="#handleDeleteRow" prefWidth="90.0" text="Löschen" />
+             <Button fx:id="btnDelete" mnemonicParsing="false" onAction="#handleDeleteRow" prefWidth="90.0" text="Löschen" />
+             <Button fx:id="btnBlock" mnemonicParsing="false" onAction="#handleBlockRow" prefWidth="90.0" text="Sperren" />
          </children></HBox>
       <HBox alignment="TOP_CENTER" layoutX="10.0" layoutY="10.0" prefWidth="200.0" spacing="25.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="5.0">
          <children>
