--- a/src/main/resources/AllCaregiverView.fxml
+++ b/src/main/resources/AllCaregiverView.fxml
@@ -13,7 +13,7 @@
           <TableColumn fx:id="colSurname" maxWidth="7500.0" minWidth="20.0"  onEditCommit="#handleOnEditSurname" prefWidth="100.0" text="Nachname" />
           <TableColumn fx:id="colFirstName" maxWidth="7500.0" onEditCommit="#handleOnEditFirstname" prefWidth="75.0" text="Vorname" />
             <TableColumn fx:id="colDateOfBirth" maxWidth="7500.0" onEditCommit="#handleOnEditDateOfBirth" prefWidth="75.0" text="Date of Birth" />
-            <TableColumn fx:id="colTelephone" maxWidth="7500.0" prefWidth="75.0" text="Telefon" />
+            <TableColumn fx:id="colTelephone" maxWidth="7500.0" onEditCommit="#handleOnEditTelephone" prefWidth="75.0" text="Phone" />
         </columns>
          <columnResizePolicy>
             <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
